<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="#00BCD4"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="Slide 2 title"
        android:textColor="#ffffff"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/disable_swiping_slide_text"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_disable_next_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="toggleNextPageSwipeLock"
        android:text="Toggle Disable Swiping to Next Slide" />

    <Button
        android:id="@+id/button_disable_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="toggleSwipeLock"
        android:text="Toggle Disable Swiping" />

    <Button
        android:id="@+id/button_disable_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="toggleProgressButton"
        android:text="Toggle Progress Button" />

    <Button
        android:id="@+id/button_disable_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="toggleSkipButton"
        android:text="Toggle Skip Button" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />
</LinearLayout>
